--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,7 @@ p {
   justify-content: space-between;
 }
 
-.story .container div, .drinks .container div {
-  padding: 100px;
+.drinks .container div {
   display: flex;
   flex-direction: column;
 }
@@ -176,8 +175,8 @@ p {
   color: #000;
 }
 
-.story img, .drinks img {
-  width: 500px;
+.story img {
+  width: 100%;
 }
 
 .drinks {
@@ -247,4 +246,20 @@ h3 {
 
 .drinks p {
   color: #000;
+}
+
+.img {
+  padding-top:100px;
+}
+
+.text {
+  padding: 50px 25px;
+  margin: 100px 25px;
+}
+
+.hero-img img{
+	width:100%;
+	height:100%;
+	object-fit: cover;
+	overflow: hidden;
 }
