--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*CSS Reset*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -41,7 +42,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* * {
+  box-sizing: border-box;
+} */
 
+/*Page*/
 body {
     font-family: 'Arial', sans-serif;
 }
@@ -262,4 +267,64 @@ h3 {
 	height:100%;
 	object-fit: cover;
 	overflow: hidden;
+}
+
+/*Media Queries*/
+@media screen and (max-width: 768px){
+  header {
+    height: 50px;
+    padding: 0;
+  }
+  .logo {
+    min-width: 500px;
+    text-align: center;
+  }
+  h1 {
+    font-size: 4em;
+  }
+  nav {
+    display: none;
+  }
+  .hero .container {
+    align-items: center;
+    padding-top: 75px;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  .hero p {
+    font-size: 1em;
+  }
+  .video-container {
+    height: 100%;
+  }
+  div .text {
+    margin: 0;
+  }
+  .story .container, .drinks .container {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+  div .img {
+    padding: 0;
+  }
+  h3 {
+    font-size: 3em;
+  }
+  .text {
+    padding: 0;
+  }
+  .story, .drinks {
+    padding: 25px;
+  }
+  div .container {
+    padding: 0;
+  }
+  .drinks .text {
+    text-align: end;
+    margin-top: 25px; 
+  }
+  p {
+    margin: 25px 0;
+  }
 }
